Include career progression times.

--- a/google-resume.tex
+++ b/google-resume.tex
@@ -57,8 +57,10 @@
 
 \subsection{Google, Inc}
 
-\affiliation{SWE in corporate device management and security}{2013 - current}
-\affiliation{SWE in Display Ads}{2010 - 2013}
+\affiliation{Staff SWE in Corporate device management and security}{2021 - current}
+\affiliation{Senior SWE in Corporate device management and security}{2015 - 2021}
+\affiliation{SWE (L4) in corporate device management and security}{2013 - 2015}
+\affiliation{SWE (L3) in Display Ads}{2010 - 2013}
 
 \subsection{Webitects Inc}
 
