Adjust the wording and the content.

--- a/google-resume.tex
+++ b/google-resume.tex
@@ -20,12 +20,12 @@
 \begin{compactitem}
 \item Pivoted Software Controls service partially towards Google prod stack: adopted standard Google prod serving while keeping the data within Datastore to reduce cost.
 \item Unified device management around a well managed single host identifier.
-\item Led the team to land Direct to Googler device provisioning while maintaining strict security requirements.
+\item Led a cross-functional team to land Direct to Googler device provisioning while maintaining strict security requirements.
 \end{compactitem}
 
 \subsection{Organizational influence}
 \begin{compactitem}
-\item Leading voice of the tech strategy for the my domain (\textapprox 30 SWEs), balancing positioning the technical stack of the org for the challenges vs. the cost of doing so.
+\item Leading voice of the tech strategy for the my domain (\textapprox 30 SWEs), balancing re-positioning the technical org stack for the challenges vs. the cost of doing so.
 \item Informed and co-opted SRE partner initiatives to standardize engagement and deployment models. Built an effective onduty to support the former and secured a meaningful inmprovement path for the latter.
 \item Mediated rank-and-file vs. leadership through analysis, inspiration, and depth.
 \end{compactitem}
@@ -40,11 +40,11 @@
 
 \section{Technical Skills}
 \begin{compactitem}
-  \item Creative approach resulting in more tailored solutions, achieving better quality while keeping costs in check.
+  \item Creative approach resulting in tailored solutions, achieving better quality while keeping costs in check.
   \item Proven track record to plan and land "change engine mid-air" system modernizations and support others through execution.
   \item Integrating reliability into tech design: SLOs, alerting, incident management, you name it.
-  \item Full mastery of the Google Java/Kotlin backend stack, accomplished with Golang.
-  \item Full mastery of the backend primitives API (protobufs), database (Spanner), testing. Slight exposure to FrontEnd development.
+  \item Full mastery of the Google Java/Kotlin backend stack, accomplished with Golang and Ruby, can get around with Python and Javascript.
+  \item Full mastery of the backend primitives API (protobufs), database (Spanner), testing. Some exposure to FrontEnd development.
 \end{compactitem}
 
 \section{Extracurricular}
@@ -57,23 +57,16 @@
 
 \subsection{Google, Inc}
 
-\affiliation{Staff SWE in Corporate device management and security}{2021 - current}
-\affiliation{Senior SWE in Corporate device management and security}{2015 - 2021}
-\affiliation{SWE (L4) in corporate device management and security}{2013 - 2015}
+\affiliation{Staff SWE (L6) in Corporate device management and security}{2021 - current}
+\affiliation{Senior SWE (L5) in Corporate device management and security}{2015 - 2021}
+\affiliation{SWE/SRE (L4) in Corporate device and accounts management}{2013 - 2015}
 \affiliation{SWE (L3) in Display Ads}{2010 - 2013}
 
 \subsection{Webitects Inc}
 
 \affiliation{Web Developer}{2008 - 2010}
 
-\begin{compactitem}
-\item Software Reliability Engineer rotation
-\item Display Ads engineer
-\end{compactitem}
-
-\section{Education}
-
-\subsection{Illinois Institute of Technology}
+\section{Education - Illinois Institute of Technology}
 
 \affiliation{Bachelor of Science in Computer Science}{August 2003 - December 2007}
 \affiliation{Bachelor of Science in Physics}{August 2003 - December 2007}
